<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >


            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:text="@string/rallyinf_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/txtRallyName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="8dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <TextView
                android:id="@+id/TextViewHaikei"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/rallyinf_backgroud"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/txtRallyName" />


            <EditText
                android:id="@+id/txtBackgroundURL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:paddingEnd="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/TextViewHaikei" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" >

                <Button
                    android:id="@+id/btnCheckBackground"
                    android:layout_width="268dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/rallyinf_checkbackground"
                    android:textAlignment="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <Button
                    android:id="@+id/slash"
                    android:layout_width="27dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="8dp"
                    android:paddingLeft="5dp"
                    android:text="/"
                    android:textAlignment="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </LinearLayout>


            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/rallyinf_stamptype"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radioKinboGroup" />

            <RadioGroup
                android:id="@+id/radioStampGroup"
                android:layout_width="334dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7">

                <RadioButton
                    android:id="@+id/radioQR"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rallyinf_qr" />

                <RadioButton
                    android:id="@+id/radioNFC"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rallyinf_nfc" />

                <RadioButton
                    android:id="@+id/radioStamp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:text="@string/rallyinf_elec" />

                <RadioButton
                    android:id="@+id/radioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rallyinf_btn" />
            </RadioGroup>


            <TextView
                android:id="@+id/txtKinbo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/kinbou"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radioStampGroup" />

            <RadioGroup
                android:id="@+id/radioKinboGroup"
                android:layout_width="327dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtKinbo">


                <RadioButton
                    android:id="@+id/radioKinboNone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/kinbou_none" />

                <RadioButton
                    android:id="@+id/radioGPS"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/kinbou_gps" />

                <RadioButton
                    android:id="@+id/radioBeacon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/kinbou_beacon" />
            </RadioGroup>

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/rallyinf_after_stamp_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radioStampGroup" />

            <RadioGroup
                android:id="@+id/radioBeepGroup"
                android:layout_width="334dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView8">

                <RadioButton
                    android:id="@+id/radioNoneBeep"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rallyinf_after_stamp_none" />

                <RadioButton
                    android:id="@+id/radioBeep"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rallyinf_after_stamp_beep" />

                <RadioButton
                    android:id="@+id/radioBeepAndVibration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rallyinf_after_stamp_beepandbibe" />

                <RadioButton
                    android:id="@+id/radioVibration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rallyinf_after_stamp_bibe" />

            </RadioGroup>
            <TextView
                android:id="@+id/txted"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/rallyinf_ed_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radioStampGroup" />

             <RadioGroup
                android:id="@+id/radioEnableGroup"
                android:layout_width="334dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txted">

                <RadioButton
                    android:id="@+id/radioEnable"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rallyinf_ed_enable" />

                <RadioButton
                    android:id="@+id/radioDisenable"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rallyinf_ed_disenable" />
            </RadioGroup>

            <Button
                android:id="@+id/btnNewRegister"
                android:layout_width="98dp"
                android:layout_height="wrap_content"
                android:text="@string/rallyinf_btnregister"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radioEnableGroup" />
        </LinearLayout>

</ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>

